# matrix-control

./: .cursorrules  .gitignore  .luthier.json  .matrix-control-root  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING.md  CONVENTIONS.md  README.md  project-configuration.cmake  pyrightconfig.json
.claude/: settings.json
.cursor/rules/: bmad-agent-chat-titles.mdc  bmad-clarity-bar.mdc  bmad-story-context-amorce.mdc  caveman-ultra.mdc  code-review-communication.mdc  communication-fr.md  core-testing.mdc  cpp-juce-standards.mdc  create-story-communication.mdc  dev-story-communication.mdc  guillaume-communication.mdc  matrix-control-project.mdc  process-clean-code.md  quick-dev-communication.mdc
.github/workflows/: build-and-test.yml  release.yml
Assets/Fonts/: OFL.txt
CMake/: filter-ide-compile-commands.py
Documentation/: README.md  hardware-latency.md  p001-path-migration-manifest.md
Documentation/Development/: bmad-method.md  hardware-latency.md  principes-dev-qualite.md  software-development-quality-principles.md  windows-midi-multi-client.md
Documentation/User/: manuel-utilisateur.md
Scripts/release/: prepare_release.py  requirements-test.txt
Source/Core/: PluginProcessor.cpp  PluginProcessor.h
Source/GUI/: MainComponent.cpp  MainComponent.h  PluginEditor.cpp  PluginEditor.h
Source/Shared/: Matrix1000Limits.h  PluginDescriptors.cpp  PluginDescriptors.h  PluginDimensions.h  PluginDisplayNames.h  PluginHelpers.cpp  PluginHelpers.h  PluginIDs.h  ProjectPaths.cpp
Source/Standalone/: MatrixControlStandaloneApp.cpp  MatrixControlStandaloneFilterWindow.h
Tests/: CMakeLists.txt  TestMain.cpp
Tests/Tools/: GenerateInitFixtures.cpp
Tests/Unit/: ActionDispatcherTests.cpp  ApvtsMasterMapperTests.cpp  ApvtsPatchMapperTests.cpp  AudioPassthroughProcessorTests.cpp  ClipboardPasteEnabledResolverTests.cpp  ClipboardServiceTests.cpp  ComboboxPatchSendDebouncerTests.cpp  DeviceAudioInputPreferenceTests.cpp  DeviceInquiryTriggerTests.cpp  DeviceMemoryLimitsTests.cpp  DeviceTypeRegistryTests.cpp  DirtyPatchTrackerTests.cpp  EditorOutboundGateTests.cpp  EditorPathTests.cpp  HardwareLatencyTests.cpp  HistoryDefragServiceTests.cpp  InitDefaultsTests.cpp  InitTemplateLoaderTests.cpp  InstrumentMidiForwarderTests.cpp  KeyboardFromMidiInputTests.cpp  MasterModelTests.cpp  MasterModuleInitServiceTests.cpp  MasterParameterSysExDispatcherTests.cpp  MatrixModBusParameterSysExDispatcherTests.cpp  MatrixModBusReorderServiceTests.cpp  MatrixModInitServiceTests.cpp  MidiActivityTrackerTests.cpp  MidiManagerTests.cpp  MidiOutboundQueueTests.cpp  MidiPortOpenFailurePropagationTests.cpp  MidiPortOpenFeedbackTests.cpp  MidiPortRoutingPropertyTests.cpp  MigratedModulePanelLayouts.cpp  MigratedModulePanelLayouts.h  ModuleActionHandlerTests.cpp  ModulePanelConfigBuilderTests.cpp  MutationAlgorithmTests.cpp  MutationHistoryStoreTests.cpp  MutationNamingTests.cpp  MutatorActionHandlerTests.cpp  (+17 more)
Tests/unit/: SysExParserTests.cpp
_bmad/: config.toml  config.toml.bak  config.user.toml
_bmad-output/: project-context.md
_bmad-output/brainstorming/: brainstorming-session-2026-06-07-ui-dimensions-strategy.md
_bmad-output/implementation-artifacts/: 0-1-gitignore-and-root-directory-renames.md  0-2-documentation-and-tests-migration.md  0-3-projectpaths-and-logger-runtime-root-ad-10.md  0-4-cmake-and-tooling-path-updates.md  0-5-migration-validation-and-p-001-sign-off.md  1-1-patchmodel-packed-buffer.md  1-2-mastermodel-packed-buffer.md  1-3-apvtspatchmapper-round-trip.md  1-4-apvtsmastermapper-round-trip.md  1-5-patch-name-bytes-0-7-sync.md  1-6-wire-patch-name-display.md  10-1-remove-interactivedisplayapvtssync-bridge.md  10-2-envelopedisplay-direct-apvts-editing.md  10-3-trackgeneratordisplay-direct-apvts-editing.md  11-1-ci-multi-platform-build-and-tests.md  11-2-cd-release-pipeline.md  11-3-ci-build-time-optimizations.md  2-1-midioutboundqueue-core.md  2-10-matrix-mod-bus-reorder-sysex.md  2-11-header-panel-layout-and-widget-styling.md  2-2-sysexdelayprofile-and-inter-message-delay.md  2-3-instrument-path-and-editor-path-producers.md  2-4-apvts-patch-parameter-to-sysex-0x06.md  2-5-apvts-master-parameter-to-full-master-sysex-0x03.md  2-6-matrix-mod-bus-parameter-sysex.md  2-7-audio-passthrough-and-peak-indicator.md  2-8-activity-leds-on-queue-traffic.md  2-9-wire-midimanager-queue-consumer.md  2-9b-header-routing-controls-uat-slice.md  3-1-initdefaults-hardcoded-buffers.md  3-2-inittemplateloader-for-patchinit-and-masterinit.md  3-3-matrix-mod-init-defaults.md  3-4-master-module-init-confirmation-path.md  4-1-patchfileservice-folder-scan.md  4-2-combobox-sentinel-states.md  4-3-folder-path-persistence.md  4-4-save-with-filename-injection.md  4-5-import-name-reconciliation.md  4-6-previous-and-next-file-navigation.md  5-1-clipboardservice-compatibility-matrix.md  (+88 more)
_bmad-output/planning-artifacts/: epic-ui-scale-audit-pixel-perfect-layout.md  epics.md  sprint-change-proposal-2026-06-06.md  sprint-change-proposal-2026-06-18.md  sprint-change-proposal-2026-06-19-bank-unlock-simplify.md  sprint-change-proposal-2026-06-19.md  sprint-change-proposal-2026-07-11-ci-infrastructure.md  sprint-change-proposal-2026-07-14-init-sysex-and-hierarchical-history-combobox.md  sprint-change-proposal-2026-07-14-solo-dev-workflow.md
_bmad-ui/: README.md  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vercel.json  vite.config.ts
_bmad-ui/artifacts/: links.yaml  story-dependencies.yaml
_bmad-ui/scripts/: agent-server.ts  sync-sessions.mjs  sync-sessions.test.mjs  vite-plugin-static-data.ts
_bmad-ui/src/: app.tsx  main.tsx  styles.css  styles.css.d.ts  types.ts
_bmad-ui/tests/: artifact-consistency.spec.ts  outcome-sessions.spec.ts  session-traces.spec.ts  smoke.spec.ts  workflow-actions.spec.ts
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_bmad/custom/: bmad-agent-tech-writer.toml  bmad-code-review.toml  bmad-create-story.toml  config.toml  (+10 more)
docs/: README.md  p001-path-migration-manifest.md
(+682 files in other folders)
